--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ li li:nth-child(10)::marker{content:"※";color:#2700ff;}
 li:nth-child(2) li:nth-child(1)::marker{content:"※";color:#9c00ff;}
 li:nth-child(2) li:nth-child(2)::marker{content:"※";color:#ff00eb;}
 li:nth-child(2) li:nth-child(3)::marker{content:"※";color:#ff0075;}
+li.nsfw::after{content:" [NSFW]";color:red;font-family:monospace;font-size:0.6rem;}
 </style>
 </head>
 <body>
@@ -29,10 +30,10 @@ li:nth-child(2) li:nth-child(3)::marker{content:"※";color:#ff0075;}
 <ul>
 <li>Public:
 <ul>
-<li>Twitter: <a href="https://twitter.com/vampubus_">@vampubus_</a></li>
+<li class="nsfw">Twitter: <a href="https://twitter.com/vampubus_">@vampubus_</a></li>
 <li>Instagram: <a href="https://www.instagram.com/vampubus/">@vampubus</a></li>
 <li>AniList: <a href="https://anilist.co/user/vampubus/">vampubus</a></li>
-<li>Reddit: <a href="https://www.reddit.com/user/vampubus/">u/vampubus</a></li>
+<li class="nsfw">Reddit: <a href="https://www.reddit.com/user/vampubus/">u/vampubus</a></li>
 <li>Xbox: <span><a href="https://www.xbox.com/play/user/vampubus">vampubus</a> ↬ <a href="https://www.trueachievements.com/gamer/vampubus/">TrueAchievements</a></span></li>
 <li>PlayStation: <span>vampubus_ ↬ <a href="https://psnprofiles.com/vampubus_">PSNProfiles</a></span></li>
 <li>Nintendo Switch: <span>SW-5736-4113-2131</span></li>
