--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ li.nsfw::after{content:" [NSFW]";color:red;font-family:monospace;font-size:0.6re
 <li>Public:
 <ul>
 <li class="nsfw">Twitter: <a href="https://twitter.com/vampubus_">@vampubus_</a></li>
+<li>Twitter: <a href="https://twitter.com/vampubus_sfw">@vampubus_sfw</a></li>
 <li>Instagram: <a href="https://www.instagram.com/vampubus/">@vampubus</a></li>
 <li>AniList: <a href="https://anilist.co/user/vampubus/">vampubus</a></li>
 <li class="nsfw">Reddit: <a href="https://www.reddit.com/user/vampubus/">u/vampubus</a></li>
@@ -44,6 +45,7 @@ li.nsfw::after{content:" [NSFW]";color:red;font-family:monospace;font-size:0.6re
 <ul>
 <li>Mail: <a href="mailto:mia@succubus.me">mia@succubus.me</a></li>
 <li>Discord: <span>vampubus</span> (only add me if I know you)</li>
+<li>Wishlists: <span><a href="https://www.amazon.de/hz/wishlist/ls/1KXSTAUDC13Q4">Amazon.de</a>, <a href="https://www.amazon.co.uk/hz/wishlist/ls/20MBKYQTH6XLQ">Amazon.co.uk</a></span></li>
 </ul>
 </ul>
 </body>
