--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ li.nsfw::after{content:" [NSFW]";color:red;font-family:monospace;font-size:0.6re
 <ul>
 <li class="nsfw">Twitter: <a href="https://twitter.com/vampubus_">@vampubus_</a></li>
 <li>Twitter: <a href="https://twitter.com/vampubus_sfw">@vampubus_sfw</a></li>
+<li>Bluesky: <a href="https://bsky.app/profile/succubus.me">@succubus.me</a></li>
 <li>Instagram: <a href="https://www.instagram.com/vampubus/">@vampubus</a></li>
 <li>AniList: <a href="https://anilist.co/user/vampubus/">vampubus</a></li>
 <li class="nsfw">Reddit: <a href="https://www.reddit.com/user/vampubus/">u/vampubus</a></li>
