--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ li.nsfw::after{content:" [NSFW]";color:red;font-family:monospace;font-size:0.6re
 <li>Twitter: <a href="https://twitter.com/vampubus_sfw">@vampubus_sfw</a></li>
 <li>Bluesky: <a href="https://bsky.app/profile/succubus.me">@succubus.me</a></li>
 <li>Instagram: <a href="https://www.instagram.com/vampubus/">@vampubus</a></li>
+<li>FetLife: <a href="https://fetlife.com/users/19129873">vampubus</a></li>
 <li>AniList: <a href="https://anilist.co/user/vampubus/">vampubus</a></li>
 <li class="nsfw">Reddit: <a href="https://www.reddit.com/user/vampubus/">u/vampubus</a></li>
 <li>Xbox: <span><a href="https://www.xbox.com/play/user/vampubus">vampubus</a> ↬ <a href="https://www.trueachievements.com/gamer/vampubus/">TrueAchievements</a></span></li>
