--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@ li li:nth-child(7)::marker{content:"※";color:#00ffc4;}
 li li:nth-child(8)::marker{content:"※";color:#00c4ff;}
 li li:nth-child(9)::marker{content:"※";color:#004eff;}
 li li:nth-child(10)::marker{content:"※";color:#2700ff;}
-li:nth-child(2) li:nth-child(1)::marker{content:"※";color:#9c00ff;}
-li:nth-child(2) li:nth-child(2)::marker{content:"※";color:#ff00eb;}
-li:nth-child(2) li:nth-child(3)::marker{content:"※";color:#ff0075;}
+li li:nth-child(11)::marker{content:"※";color:#9c00ff;}
+li:nth-child(2) li:nth-child(1)::marker{content:"※";color:#ff00eb;}
+li:nth-child(2) li:nth-child(2)::marker{content:"※";color:#ff0075;}
+li:nth-child(2) li:nth-child(3)::marker{content:"※";color:#ff0000;}
 li.nsfw::after{content:" [NSFW]";color:red;font-family:monospace;font-size:0.6rem;}
 </style>
 </head>
