add Succubus to title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>※ Mia [vampubus]</title>
+<title>※ Succubus Mia [vampubus]</title>
 <style>
 html{font-family:Noto Sans,Droid Sans,DejaVu Sans,Calibri,Verdana,sans-serif;background:#2c2f33;color:#fff;font-size:1.5rem;}
 a{color:#ff009b;}
