--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ li.nsfw::after{content:" [NSFW]";color:red;font-family:monospace;font-size:0.6re
 <li>PlayStation: <span>vampubus_ ↬ <a href="https://psnprofiles.com/vampubus_">PSNProfiles</a></span></li>
 <li>Nintendo Switch: <span>SW-5736-4113-2131</span></li>
 <li>Steam: <span><a href="https://steamcommunity.com/id/vampubus/">vampubus</a> ↬ <a href="https://store.steampowered.com/wishlist/id/vampubus/">Wishlist</a></span></li>
-<li>GOG: <span><a href="https://www.gog.com/u/vampubus/">vampubus</a> ↬ <a href="https://www.gog.com/u/vampubus/wishlist">Wishlist</a></span></li>
+<li>GOG: <span><a href="https://www.gog.com/u/vampubus">vampubus</a> ↬ <a href="https://www.gog.com/u/vampubus/wishlist">Wishlist</a></span></li>
 </ul>
 </li>
 <li>Private:
