--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ li.nsfw::after{content:" [NSFW]";color:red;font-family:monospace;font-size:0.6re
 <li>Public:
 <ul>
 <li class="nsfw">Bluesky: <a href="https://bsky.app/profile/succubus.me">@succubus.me</a></li>
+<li class="nsfw">Mastodon: <a rel="me" href="https://kinkycats.org/@vampubus">@vampubus@kinkycats.org</a></li>
 <li class="nsfw">Twitter: <a href="https://twitter.com/vampubus_">@vampubus_</a></li>
 <li>Twitter: <a href="https://twitter.com/vampubus_sfw">@vampubus_sfw</a></li>
 <li>Instagram: <a href="https://www.instagram.com/vampubus/">@vampubus</a></li>
