add pokemon go, deprecate twitter

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ li li:nth-child(12)::marker{content:"※";color:#ff00eb;}
 li li:nth-child(13) li:nth-child(2)::marker{content:"※";color:#ff0075;}
 li li:nth-child(14) li:nth-child(3)::marker{content:"※";color:#ff0000;}
 li.nsfw::after{content:" [NSFW]";color:red;font-family:monospace;font-size:0.6rem;}
+li.strike{text-decoration:line-through;}
 </style>
 </head>
 <body>
@@ -35,7 +36,7 @@ li.nsfw::after{content:" [NSFW]";color:red;font-family:monospace;font-size:0.6re
 <ul>
 <li class="nsfw">Bluesky: <a href="https://bsky.app/profile/succubus.me">@succubus.me</a></li>
 <li class="nsfw">Mastodon: <a rel="me" href="https://kinkycats.org/@vampubus">@vampubus@kinkycats.org</a></li>
-<li class="nsfw">Twitter: <a href="https://twitter.com/vampubus_">@vampubus_</a></li>
+<li class="nsfw strike">Twitter: <a href="https://twitter.com/vampubus_">@vampubus_</a></li>
 <li>Instagram: <a href="https://www.instagram.com/vampubus/">@vampubus</a></li>
 <li class="nsfw">FetLife: <a href="https://fetlife.com/users/19129873">vampubus</a></li>
 <li>AniList: <a href="https://anilist.co/user/vampubus/">vampubus</a></li>
@@ -43,6 +44,7 @@ li.nsfw::after{content:" [NSFW]";color:red;font-family:monospace;font-size:0.6re
 <li>Xbox: <span><a href="https://www.xbox.com/play/user/vampubus">vampubus</a> ↬ <a href="https://www.trueachievements.com/gamer/vampubus/">TrueAchievements</a></span></li>
 <li>PlayStation: <span>vampubus_ ↬ <a href="https://psnprofiles.com/vampubus_">PSNProfiles</a></span></li>
 <li>Nintendo Switch: <span>SW-5736-4113-2131</span></li>
+<li>Pokémon Go: <span>1074 8802 8861</span></li>
 <li>Steam: <span><a href="https://steamcommunity.com/id/vampubus/">vampubus</a> ↬ <a href="https://store.steampowered.com/wishlist/id/vampubus/">Wishlist</a></span></li>
 <li>GOG: <span><a href="https://www.gog.com/u/vampubus">vampubus</a> ↬ <a href="https://www.gog.com/u/vampubus/wishlist">Wishlist</a></span></li>
 </ul>
