--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@ li.strike{text-decoration:line-through;}
 <li>GOG: <span><a href="https://www.gog.com/u/vampubus">vampubus</a> ↬ <a href="https://www.gog.com/u/vampubus/wishlist">Wishlist</a></span></li>
 </ul>
 </li>
-<li>Private:
+<li>Private: (only for friends)
 <ul>
 <li>Mail: <a href="mailto:mia@succubus.me">mia@succubus.me</a></li>
-<li>Discord: <span>vampubus</span> (only add me if I know you)</li>
+<li>Discord: <a href="https://discordapp.com/users/820973955958964265">vampubus</a></li>
 <li>Wishlists: <span><a href="https://www.amazon.de/hz/wishlist/ls/1KXSTAUDC13Q4">Amazon.de</a>, <a href="https://www.amazon.co.uk/hz/wishlist/ls/20MBKYQTH6XLQ">Amazon.co.uk</a></span></li>
 </ul>
 </ul>
