change mail add

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ li.strike{text-decoration:line-through;}
 </li>
 <li>Private: (only for friends)
 <ul>
-<li>Mail: <a href="mailto:mia@succubus.me">mia@succubus.me</a></li>
+<li>Mail: <a href="mailto:mia@akuma.org">mia@akuma.org</a></li>
 <li>Discord: <a href="https://discordapp.com/users/820973955958964265">vampubus</a></li>
 <li>Wishlists: <span><a href="https://www.amazon.de/hz/wishlist/ls/1KXSTAUDC13Q4">Amazon.de</a>, <a href="https://www.amazon.co.uk/hz/wishlist/ls/20MBKYQTH6XLQ">Amazon.co.uk</a></span></li>
 </ul>
